--- a/vignettes/CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/CSP_AQOL6D_TTU.Rmd
@@ -9,6 +9,6 @@ vignette: >
 
 \blandscape
 <!---BLOCK_LANDSCAPE_START--->
-**The workflow previously described on this page is now defunct as the functions it relied on have been superseded by methods in the [specific package](https://ready4-dev.github.io/specific). Updated syntax for reporting utility mapping studies with the TTU package is currently being developed.**
+**The workflow previously described on this page is now defunct as it used deprecated syntax. The equivalent vignette with current TTU syntax is available [here](V_01.html).**
 
 
