--- a/vignettes/CSP_EQ5D_TTU.Rmd
+++ b/vignettes/CSP_EQ5D_TTU.Rmd
@@ -9,4 +9,4 @@ vignette: >
 
 \blandscape
 <!---BLOCK_LANDSCAPE_START--->
-**The workflow previously described on this page is now defunct as the functions it relied on have been superseded by methods in the [specific package](https://ready4-dev.github.io/specific). Updated syntax for reporting utility mapping studies with the TTU package is currently being developed.**
+**The workflow previously described on this page is now defunct as the functions it relied on have been superseded by methods in the [specific package](https://ready4-dev.github.io/specific). The equivalent vignette is available [here](https://ready4-dev.github.io/specific/articles/V_01.html).**
