edits to author methd

--- a/vignettes/V_01.Rmd
+++ b/vignettes/V_01.Rmd
@@ -79,6 +79,7 @@ We begin by loading our required packages.
 
 ```{r message=FALSE, warning=FALSE}
 library(ready4)
+library(ready4show)
 library(ready4use)
 library(youthvars)
 library(scorz)
